--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "mongoose": "^8.13.0",
     "next": "15.1.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
