--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.13.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "nodemailer": "^6.10.0",
     "openai": "^4.91.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
